--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin-top: 96px;
+  margin-top: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,8 +14,8 @@
 }
 
 .explain {
-  font-size: 1.125rem;
-  max-width: 1200px;
+  font-size: 1rem;
+  max-width: 1400px;
 }
 
 .divider {
@@ -32,7 +32,7 @@
 }
 
 .nftBoxGrid {
-  width: 1200px;
+  width: 1600px;
   max-width: 95vw;
   display: flex;
   flex-direction: row;
@@ -46,23 +46,23 @@
 .nftBox {
   border-radius: 16px;
   border: 1px solid #ccc;
-  width: 19%;
+  width: 15%;
   min-height: 200px;
   padding: 16px;
 }
 
 .optionSelectBox {
-  border-radius: 16px;
-  border: 1px solid #ccc;
-  width: 48%;
-  min-height: 200px;
-  height: 100%;
+  border-radius: 25px;
+  border: 1px solid #444040;
+  width: 30%;
+  min-height: 150px;
+  height: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 0px;
+  padding-right: 0px;
   cursor: pointer;
 }
 
