--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,43 +1,24 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
 
-/* Box sizing rules */
-*,
-*::before,
-*::after {
+a {
+  color: #7dd3fc;
+  text-decoration: none;
+}
+
+* {
   box-sizing: border-box;
 }
 
-/* Set core body defaults */
+html {
+  color-scheme: dark;
+}
 body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-  padding-bottom: 250px;
-}
-
-/* Inherit fonts for inputs and buttons */
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-:root {
-  --black: #1c1e21;
-  --white: #ffffff;
-  --tw-color1: #a855f7;
-  --tw-color1-hover: #9333ea;
-}
-
-body {
-  background: var(--black);
-  font-family: "Inter", sans-serif;
-  color: var(--white);
-  display: flex;
-  margin: 0;
-}
-
-h2 {
-  font-size: 1rem;
+  color: #e7e8e8;
+  background: #070e2b;
 }
